<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="piggyBankViewModel"
            type="com.baszczyk.mercpiggibank3.piggy.PiggyBankViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PiggiBankFragment">


        <TextView
            android:id="@+id/name_car"
            android:layout_width="68dp"
            android:layout_height="38dp"
            android:layout_marginTop="32dp"
            android:text="@string/name_main"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/constant_text_Mercedes"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/version_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/additional_name"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/name_car"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="@+id/name_car"
            app:layout_constraintTop_toBottomOf="@+id/name_car" />

        <TextView
            android:id="@+id/capasity_enginee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:text="@string/capacity_enginee"
            app:layout_constraintEnd_toStartOf="@+id/name_car"
            app:layout_constraintTop_toBottomOf="@+id/version_number" />

        <TextView
            android:id="@+id/power_enginee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/power_engine"
            app:layout_constraintStart_toEndOf="@+id/name_car"
            app:layout_constraintTop_toBottomOf="@+id/version_number" />

        <TextView
            android:id="@+id/nominal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/pln"
            app:layout_constraintBottom_toBottomOf="@+id/actual_price"
            app:layout_constraintEnd_toEndOf="@+id/power_enginee"
            app:layout_constraintTop_toTopOf="@+id/actual_price" />

        <TextView
            android:id="@+id/add_to_pigge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/add_field"
            app:layout_constraintBottom_toBottomOf="@+id/input_amount"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_deposit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:background="@drawable/side_nav_bar"
            android:text="@string/dodaj"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_amount"
            app:layout_constraintHorizontal_bias="0.398"
            app:layout_constraintStart_toStartOf="@+id/input_amount" />

        <EditText
            android:id="@+id/input_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/add_deposit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintStart_toEndOf="@+id/add_to_pigge"
            app:layout_constraintTop_toBottomOf="@+id/actual_price"
            app:layout_constraintVertical_bias="0.271" />

        <TextView
            android:id="@+id/actual_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="268dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/point_cost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.205"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/version_number" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/destination"
            app:layout_constraintBottom_toBottomOf="@+id/actual_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/actual_price"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/constant_text_Mercedes"
            android:layout_width="105dp"
            android:layout_height="43dp"
            android:text="Mercedes:"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_car"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.218"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>